# gamecppraylib

./: README.md  howtorunopengl.txt  log.txt
.github/workflows/: cmake-single-platform.yml  cmake-single-platform.yml_bk
docs/: Google Gemini_run_onsony.mhtml  how to use Image crop and image rotate in raylib - Google Search.mhtml
shibimfighter/: BackGround.hpp  BaseSpace.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Doxyfile  Enemy.cpp  Explosion.cpp  Explosion.hpp  Fighter.cpp  Fighter.hpp  NoteFromAI.txt  PowerDrug.cpp  PowerDrug.hpp  compile_flags.txt  notebuilderrorifsharefromnet.txt  raylib-cheatsheet.mhtml  shibimfighter.mk  shibimfighter.txt  tst_basespace.cpp  tst_enemy.cpp
shibimfighter_refactor/: BaseSpace.cpp  BaseSpace.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Doxyfile  Enemy.cpp  Enemy.hpp  Explosion.cpp  Fighter.cpp  Fighter.hpp  LoadedImage.cpp  LoadedImage.hpp  NoteForRefactors.txt  balldemo.cpp  cropdemo.cpp  log_beforerefactoring.txt  main.cpp  shibimfighter.project
